# blink

./: Cargo.toml  LICENSE  README.md  install.sh  uninstall.sh  update.sh
src/: app.rs  main.rs  style.css  window.rs
src/core/: clipboard.rs  color_config.rs  config.rs  drives.rs  file_ops.rs  mod.rs  pinned.rs  scanner.rs  search.rs  sidebar_prefs.rs
src/widgets/: file_view.rs  header_bar.rs  mod.rs  sidebar.rs
