[package]
name = "blink"
version = "0.1.0"
edition = "2021"
description = "Lightweight file explorer"
authors = ["Blink Team"]

[dependencies]
gtk4 = { version = "0.9", features = ["v4_12"] }
libadwaita = { version = "0.7", features = ["v1_6"] }
glib = "0.20"
gio = "0.20"
async-channel = "2.0"
trash = "5"
chrono = "0.4"
dirs = "5"
open = "5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1"